[gd_scene load_steps=8 format=3 uid="uid://8wyi6cp31ldu"]

[ext_resource type="Texture2D" uid="uid://ct628r1cvn3qd" path="res://assets/recipe_book.png" id="1_02kbu"]
[ext_resource type="Script" path="res://moulding_minigame_3.gd" id="1_r6u0d"]
[ext_resource type="Texture2D" uid="uid://cjf6jeonci733" path="res://assets/toppings_counter.png" id="2_wltka"]
[ext_resource type="PackedScene" uid="uid://dtj25e532bnlk" path="res://scenes/baked_item.tscn" id="3_i1wjq"]
[ext_resource type="FontFile" uid="uid://cjp853o8vg27q" path="res://assets/Jua-Regular.ttf" id="4_mgwyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dhr7"]
bg_color = Color(0.345098, 0.109804, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivbly"]
bg_color = Color(0.73, 0.31244, 0.1606, 1)

[node name="moulding_minigame_3" type="Node2D" node_paths=PackedStringArray("progress")]
script = ExtResource("1_r6u0d")
progress = NodePath("progress_bar")

[node name="RecipeBook" type="Sprite2D" parent="."]
position = Vector2(569.8, 321.5)
scale = Vector2(4.00667, 4.00667)
texture = ExtResource("1_02kbu")

[node name="MouldingCounter" type="Sprite2D" parent="."]
position = Vector2(574.96, 318.5)
scale = Vector2(1.00167, 1.00167)
texture = ExtResource("2_wltka")

[node name="baked_item" parent="." instance=ExtResource("3_i1wjq")]
position = Vector2(415, 372)
scale = Vector2(2.64, 2.64)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 794.0
offset_top = 103.0
offset_right = 1041.0
offset_bottom = 525.0
color = Color(1, 0.827451, 0.678431, 1)

[node name="loaf_button" type="Button" parent="."]
offset_left = 842.0
offset_top = 135.0
offset_right = 1007.0
offset_bottom = 217.0
metadata/loaf = true

[node name="Label" type="Label" parent="loaf_button"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.27451, 0.137255, 0.113725, 1)
theme_override_fonts/font = ExtResource("4_mgwyd")
theme_override_font_sizes/font_size = 50
text = "loaf"
horizontal_alignment = 1
vertical_alignment = 1

[node name="crossaint_button" type="Button" parent="."]
offset_left = 842.0
offset_top = 247.0
offset_right = 1007.0
offset_bottom = 329.0
metadata/croissant = true

[node name="Label" type="Label" parent="crossaint_button"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.27451, 0.137255, 0.113725, 1)
theme_override_fonts/font = ExtResource("4_mgwyd")
theme_override_font_sizes/font_size = 30
text = "croissant"
horizontal_alignment = 1
vertical_alignment = 1

[node name="baguette_button" type="Button" parent="."]
offset_left = 843.0
offset_top = 363.0
offset_right = 1008.0
offset_bottom = 445.0
metadata/baguette = true

[node name="Label" type="Label" parent="baguette_button"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0.27451, 0.137255, 0.113725, 1)
theme_override_fonts/font = ExtResource("4_mgwyd")
theme_override_font_sizes/font_size = 30
text = "baguette"
horizontal_alignment = 1
vertical_alignment = 1

[node name="progress_bar" type="ProgressBar" parent="."]
offset_left = 534.0
offset_top = 272.0
offset_right = 574.0
offset_bottom = 335.0
scale = Vector2(1, 3.16)
theme_override_styles/background = SubResource("StyleBoxFlat_4dhr7")
theme_override_styles/fill = SubResource("StyleBoxFlat_ivbly")
value = 10.0
fill_mode = 3
show_percentage = false

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 534.0
offset_top = 335.0
offset_right = 574.0
offset_bottom = 340.0
color = Color(0.603922, 0.552941, 0.145098, 1)

[node name="Button" type="Button" parent="."]
offset_left = 526.0
offset_top = 481.0
offset_right = 581.0
offset_bottom = 512.0
text = "hold"

[connection signal="pressed" from="loaf_button" to="." method="_on_loaf_button_pressed"]
[connection signal="pressed" from="crossaint_button" to="." method="_on_crossaint_button_pressed"]
[connection signal="pressed" from="baguette_button" to="." method="_on_baguette_button_pressed"]
